# rb_demo

./: Cargo.toml  README.md  application-dev.yml
src/: entity.rs  main.rs
src/handler/: user_handler.rs
src/load_config/: init_load_config.rs  models.rs
src/service/: user_service.rs
src/utils/: constant.rs  id_generator.rs  mod.rs  mysql_init.rs
src/vo/: mod.rs  req_vo.rs  resp_vo.rs
