[package]
name = "rb_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rbs = { version = "4.5" }
rbdc-mysql = { version = "4.5", default-features = false, features = [
    "tls-native-tls",
] }
rbatis = { version = "4.5" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
fast_log = "1.6"


axum = "0.7"
tower = "0.4"

serde_yaml = "0"
#日志依赖
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
schemars = "0"
lazy_static = "1"
# 一次性初始化对象工具包
once_cell = "1.18.0"


# 工具包
anyhow = "1"
